--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -77,12 +77,13 @@
           data-th-href="@{'/user/contacts/add'}"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
-          <i class="fa-solid fa-plus h-5 w-5"></i>
+          <i
+            class="fa-solid fa-plus h-5 w-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+          ></i>
           <span class="flex-1 ms-3 whitespace-nowrap">Add Contact</span>
-          <span
-            class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300"
-            >3</span
-          >
+          <!-- <span
+              class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300"
+            ></span> -->
         </a>
       </li>
       <li>
@@ -90,7 +91,9 @@
           data-th-href="@{'/user/contacts'}"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
-          <i class="fa-regular fa-address-book h-5 w-5"></i>
+          <i
+            class="fa-regular fa-address-book h-5 w-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+          ></i>
           <span class="flex-1 ms-3 whitespace-nowrap">Contacts</span>
         </a>
       </li>
@@ -99,7 +102,7 @@
           href="#"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
-          <svg
+          <!-- <svg
             class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
@@ -109,7 +112,10 @@
             <path
               d="M17 5.923A1 1 0 0 0 16 5h-3V4a4 4 0 1 0-8 0v1H2a1 1 0 0 0-1 .923L.086 17.846A2 2 0 0 0 2.08 20h13.84a2 2 0 0 0 1.994-2.153L17 5.923ZM7 9a1 1 0 0 1-2 0V7h2v2Zm0-5a2 2 0 1 1 4 0v1H7V4Zm6 5a1 1 0 1 1-2 0V7h2v2Z"
             />
-          </svg>
+          </svg> -->
+          <i
+            class="fa-solid fa-paper-plane flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+          ></i>
           <span class="flex-1 ms-3 whitespace-nowrap">Direct Message</span>
         </a>
       </li>
