--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -56,5 +56,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script data-th-src="@{'/js/script.js'}"></script>
     <script data-th-src="@{'/js/contacts.js'}"></script>
+    <script data-th-src="@{'/js/admin.js'}"></script>
   </body>
 </html>
