--- a/src/main/resources/templates/user/update_contact_view.html
+++ b/src/main/resources/templates/user/update_contact_view.html
@@ -217,8 +217,8 @@
                   </p>
                   <!-- upload_image_preview -->
                   <img
+                    data-th-src="*{picture}"
                     class="max-h-52 mx-auto rounded-lg shadow m-3"
-                    src=""
                     id="upload_image_preview"
                     alt=""
                   />
